# schedule-gui-app

./: CMakeLists.txt  run.sh
android/CMake_test/: CMakeLists.txt
android/CMake_test/src/: main.cpp
android/android-project/: local.properties
android/android-project/app/jni/: SDL
android/android-project/app/jni/src/: Android.mk  CMakeLists.txt  main.cpp
android/android-project/app/src/main/: AndroidManifest.xml
android/android-project/app/src/main/java/org/libsdl/app/: SlickSchedule.java
android/src/: main.cpp
archive/: canvas.cpp  canvas.h
src/: canvas.cpp  canvas.h  color.h  engine.cpp  engine.h  main.cpp  window.cpp  window.h
